--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Hi, I'm Sergey - a frontend developer. Here you'll find examples of my work. Take a look and get in touch if you need a professional frontend developer for your project."
+    <meta name="description"
+      content="I'm Sergey Fedorovich - a frontend developer. Here you'll find examples of my work. Take a look and get in touch if you need a professional frontend developer for your project."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Portfolio - Sergey Fedorovich</title>
+    <title>Sergey Fedorovich - frontend developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
