add prettier & all files refactor

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description"
+    <meta
+      name="description"
       content="I'm Sergey Fedorovich - a frontend developer. Here you'll find examples of my work. Take a look and get in touch if you need a professional frontend developer for your project."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
